Add summaries for weekend of 2024-07-06 to 2024-07-07; add week summary; fetch latest personal issues

--- a/personal-issues/1626.md
+++ b/personal-issues/1626.md
@@ -1,5 +1,5 @@
 title:	Vipul personal projects priorities | week of 2024-07-01 to 2024-07-07
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -31,5 +31,5 @@ NOTE: I made this mid-week and based it off of #1580. I hadn't made an issue for
 
 ## Timelines wiki stuff
 
-- [ ] Continue updating timeline of AI safety
+- [x] Continue updating timeline of AI safety
 
