--- a/personal-issues/1628.md
+++ b/personal-issues/1628.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-07-06
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,44 @@ projects:
 milestone:	
 number:	1628
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~30 minutes: Finish this round of expansion of timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/c2d1660f9c56c0f4b38d2f0c10d316e09b9f11d2
+### Analytics
+
+- [x] ~3 minutes: Do quick monthly analytics checks
+
+### Backups
+
+- [x] ~3 minutes: Do various monthly backups
+
+### BART
+
+- [x] ~5 minutes: Add ridership data for April 2024 or May 2024 https://github.com/vipulnaik/bart/commit/8cbd795e0258f3c6e129745116e421cf3a5b417d
+
+### Org Watch
+
+- [x] ~2 minutes: Run monthly queries
+
 ## Personal chores
 
 - [x] ~10 minutes: Rearrange some files and document phone data management process
 - [x] ~2 minutes: Take care of a bill
-- [x] ~4 minutes: Reactivate optimized battery charging and take related notes 
+- [x] ~4 minutes: Reactivate optimized battery charging and take related notes
+- [x] ~8 minutes: Add summaries for Tuesday to Friday https://github.com/vipulnaik/daily-updates/commit/4568325c838dfd2fd9844275b8b47e42a6578718
+- [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/c2f7eef64e0c86572f0ae850ede2d8168361ae96
+- [x] ~7 minutes: Book Tdap vaccine booster dose https://github.com/vipulnaik/diet-exercise-health/commit/e2fbc98739dae51c6782b0941e46bd9b9886ee36
+- [x] ~50 minutes: Put together a documents with best practices around vaccine appointments, dental cleaning appointments, and blood tests, with a focus on setting calendar reminders for the period before and after the events https://github.com/vipulnaik/diet-exercise-health/commits/master/best-practices?since=2024-07-06&until=2024-07-06
+- [x] ~3 minutes: Clearing out of old personal screenshots
+
+## House chores
+
+- [x] ~6 minutes: Do monthly smoke detector and CO alarm checks; replace a battery
+
+## Other activities
+
+- [x] ~10 minutes: Continue watching Ninja Nerd videos (new content)
+- [x] ~25 minutes: Watch an older Ninja Nerd video for review purposes
+- [x] ~5 minutes: Have some discussions with a friend
