Add summaries for period of 2024-07-08 to 2024-07-11; fetch latest personal issues

--- a/personal-issues/1630.md
+++ b/personal-issues/1630.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-07-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,11 +8,21 @@ projects:
 milestone:	
 number:	1630
 --
+## Personal projects
+
+### Wikipedia editing
+
+- [x] ~2 minutes: Review a draft and fix a typo https://github.com/vipulnaik/working-drafts/commit/2a34e04bcce7889b67878e81bf7ea464b8f983d1
+
 ## Personal finances, income and taxes
 
 - [x] ~20 minutes: Continue working through some tax stuff
 - [x] ~2 minutes: Transfer money between accounts
 - [x] ~2 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/59311f88e3cb3df2e469582d95307788cc7f0862
+
+## Personal chores
+
+- [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/17fee22744c9a3fc3cd89d209d8e962dd0577c8c
 
 ## House chores
 
