--- a/personal-issues/1634.md
+++ b/personal-issues/1634.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-07-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,25 @@ projects:
 milestone:	
 number:	1634
 --
+## Personal projects
+
+### Contract work for Vipul Naik
+
+- [x] ~5 minutes: Add June 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/1184f6d9962a2dd1f20d5da205289dae94940196
+
+### US visa process issues
+
+- [x] ~15 minutes: Review issues, check their status, and make edits/updates
+
+## Personal finances, income and taxes
+
+- [x] ~1 minute: Update June 2024 contractwork balance to reflect payments due to @riceissa https://github.com/vipulnaik/personal-finances/commit/4c92d3e64bfc5737fa83fa3fa60029714d96606f
+
 ## Personal chores
 
 - [x] ~40 minutes: Walgreens trip for Tdap vaccine booster dose + shopping https://github.com/vipulnaik/diet-exercise-health/commit/06ff99aa37821c386aac0af06a5a343f61c55b16
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/1aa3acbd18750cb6169d8f378bf25e875d843a1d
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/edb92dedd8805597cbe63ebfd775c106a787a094
+- [x] ~7 minutes: Take care of some personal device usage recording (disk, battery, etc.)
+- [x] ~4 minutes: Check status for a few bureaucratic items
+- [x] ~30 minutes: Do a full pass of review and update for health profile https://github.com/vipulnaik/diet-exercise-health/commits/master/profile-information/health-profile.md?since=2024-07-12&until=2024-07-12
