Add summaries for period of 2024-07-15 to 2024-07-19; fetch latest personal issues

--- a/personal-issues/1637.md
+++ b/personal-issues/1637.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-07-15
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,11 +8,22 @@ projects:
 milestone:	
 number:	1637
 --
+## Personal projects
+
+### AI Watch / Org Watch
+
+- [x] ~4 minutes: Coordinate on and reply to a couple of emails
+
+## Personal finances, income and taxes
+
+- [x] ~2 minutes: Look into some stuff related to India taxes
+
 ## Personal chores
 
 - [x] ~5 minutes: Make some exercise and Tdap vaccine booster dose updates https://github.com/vipulnaik/diet-exercise-health/commit/6783b71670c109fa61f3c6e2edd4ac5faf1d3554 https://github.com/vipulnaik/diet-exercise-health/commit/72dc9a643ddf5df34ce9180156088e0d9683c462
 - [x] ~1 hour 50 minutes: Meal prep (excluding 10 minutes multiplexed with watching Ninja Nerd videos) https://github.com/vipulnaik/diet-exercise-health/commit/73ee58043f32fe8d45a74b1ef7b34c7d6d7d8416
+- [x] ~7 minutes: Add rest-of-week summaries + week summary https://github.com/vipulnaik/daily-updates/commit/d2ba237561376f59521d8e5063473dc6a04bdc05
 
 ## Other activities
 
-- [ ] ~10 minutes: Continue watching Ninja Nerd videos (new content)
+- [x] ~20 minutes: Continue watching Ninja Nerd videos (new content)
