Add summaries for weekend of 2024-07-20 to 2024-07-21; add week summary; fetch latest personal issues

--- a/personal-issues/1642.md
+++ b/personal-issues/1642.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-07-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,24 @@ projects:
 milestone:	
 number:	1642
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~1 hour: Continue with subwiki upgrades and some related steps
+
 ## Personal chores
 
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/4cdadf3d316015454602173388fcf3db0b21ef01
 - [x] ~5 minutes: Add a pulse oximeter reading and update health notes https://github.com/vipulnaik/diet-exercise-health/commit/3c2bae5a3c6e57923249f1cf8f216078c09f8f9a https://github.com/vipulnaik/diet-exercise-health/commit/4492190f4a36f422949d91bfa4544ff057eba481
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/e8fa9bf2c71894364d1f1b65e16c1c698bbad90f
+- [x] ~20 minutes: Clean stove area and underside of stove (quarterly cleaning task)
+- [x] ~2 hours: Meal prep https://github.com/vipulnaik/diet-exercise-health/commit/1e0125b1286214f495afa8462458b0f913d2aa83
+
+## Family and career planning
+
+- [x] ~1 hour 30 minutes: Put together a cover page
+
+## Other activities
+
+- [x] ~15 minutes: Continue watching Ninja Nerd videos (new content)
