Add summaries for period of 2024-07-26 to 2024-07-28; add week summary; fetch latest personal issues

--- a/personal-issues/1648.md
+++ b/personal-issues/1648.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-07-26
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,34 @@ projects:
 milestone:	
 number:	1648
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~10 minutes: Wrap up review submission for timeline of Delhi Metro https://timelines.issarice.com/wiki/Talk:Timeline_of_Delhi_Metro#Review_by_Vipul_on_2024-07-25_.2F_2024-07-26
+- [x] ~13 minutes: Do a first pass of review of timeline of biorisk (no formal review submission yet)
+- [x] ~5 minutes: Begin reviewing timeline of Microsoft Copilot 
+
+## Personal finances, income and taxes
+
+- [x] ~35 minutes: Continue work started yesterday reconciling my tax data with IRS transcripts
+
 ## Personal chores
 
+### Cooking and food purchases
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/4b5af0993be9548dce00ff7e3cec3eec5ef8eda4
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/ba02f3604b38aa91cf72823e1f0204d9fa7c24be
+
+### Updates tracking
+
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/6207aea50c72fded2fab4dd89e643e73649efca4
+
+### Cleaning
+
+- [x] ~10 minutes: Rinse used bottles for recycling: olive oil glass bottles, dish soap bottles, and used turmeric bottle
+- [x] ~3 minutes: Monthly restroom sink cleaning
+
+### Health recording and practices creation
+
+- [x] ~10 minutes: Continue updating health notes https://github.com/vipulnaik/diet-exercise-health/commit/2937df26911e8895aad9068588e2d11e93abf9a8
+- [x] ~30 minutes: Work on fleshing out some best practices https://github.com/vipulnaik/diet-exercise-health/commit/6e6fac7d40d9c95b5e37ca2a1537bcf53c4cf544 https://github.com/vipulnaik/diet-exercise-health/commit/bb15bd4771ebe7a42709480dee74581b94785e9c
