Add summaries for period of 2024-08-05 to 2024-08-08; fetch latest personal issues

--- a/personal-issues/1658.md
+++ b/personal-issues/1658.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-08-05
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,21 @@ projects:
 milestone:	
 number:	1658
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~1 hour 30 minutes: Continue with MediaWiki upgrades and communicating current limitations; experiment with tweaks to rate limiting logic, which unfortunately led me down a rabbit hole of confusion
+
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~45 minutes: Abridged potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/f43ce7d4874dc670a9687b4d9a73ca5f0d1db661
+### Packages
+
 - [x] ~1 hour 10 minutes: Pick up package from Amazon Hub Locker https://github.com/vipulnaik/diet-exercise-health/commit/a73d940f1a54b29895f51acd9ac99ca9e071a6d2
+
+### Updates tracking
+
+- [x] ~4 minutes: Add Sunday summaries + week summary https://github.com/vipulnaik/daily-updates/commit/1e54275701ec3509b73c56df75b4af7551aca825
