--- a/personal-issues/1663.md
+++ b/personal-issues/1663.md
@@ -13,11 +13,45 @@ number:	1663
 ### BART and timelines wiki
 
 - [x] ~30 minutes: Add ridership data for two new months https://github.com/vipulnaik/bart/commit/c519d14842f9b29ab8bfbfd2513e2c53af161d91; clarify stuff in preamble https://github.com/vipulnaik/bart/commit/366b36f7588794ce670946e23fe5fd523d82d1b0 https://github.com/vipulnaik/bart/commit/7d0c3c85d79e31532f2444e51bb066d67b9038fe; update charts in timeline of BART https://github.com/vipulnaik/working-drafts/commit/d37effa7ce7e5eaeabd4bb78b8504cbf838b029f
+- [x] ~15 minutes: Discuss next steps with Sebastian regarding stuff to work on
+
+### AI Watch
+
+- [x] ~2 minutes: Do monthly AI Watch check
 
 ## Personal chores
 
+### Personal practices
+
+- [x] ~5 minutes: Put together best practices regarding testing (mainly focused on personal site workflows)
+
+### Health recording
+
 - [x] ~4 minutes: Record blood pressure readings and pulse oximeter reading https://github.com/vipulnaik/diet-exercise-health/commit/6734c598b5d5b7313efa42d2f61aa53c8293e788
+- [x] ~12 minutes: Continue doing health research and record updates https://github.com/vipulnaik/diet-exercise-health/commit/a7e62ae98e2146a012922a2aec8d8c3268a4e216
+
+### Updates tracking and planning
+
+- [x] ~2 minutes: Add Friday summaries https://github.com/vipulnaik/daily-updates/commit/8c048dbd38f20fa6a8732d09f5c21ae40c37ddbf
+- [x] ~2 minutes: Refine policy regarding day job work on weekends https://github.com/vipulnaik/daily-updates/commit/278b06be211f6015a022ba23f2c3cba863fca929
+
+### Trash and recycling
+
+- [x] ~4 minutes: Sort my accumulated mail
+- [x] ~4 minutes: Pack my paper recycling and paper bottles (to be trashed)
+- [x] ~4 minutes: Take out the trash
+
+### Laundry
+
+- [x] ~15 minutes: Heavy laundry
 
 ## House chores
 
 - [x] ~5 minutes: Deal with a toilet issue
+- [x] ~2 minutes: Sort accumulated junk mail for former residents / generic recipients
+
+## Other activities
+
+### Medical education
+
+- [x] ~5 minutes: Continue watching Ninja Nerd videos (new content; continuing the embryology playlist)
