--- a/personal-issues/1669.md
+++ b/personal-issues/1669.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-08-16
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,20 +10,34 @@ number:	1669
 --
 ## Personal finances, income and taxes
 
+### Financial transactions
+
+- [x] ~5 minutes: Take care of a few routine financial transactions
+
 ### US taxes
 
 - [x] ~1 hour: Continue making progress on tax stuff and finish recording today's work
 
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/e27e11aa102e553dc4ef1c58bfadeafd960c1bd7
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add summaries for the past three days https://github.com/vipulnaik/daily-updates/commit/2137797bebb8dff8a01cf8eb4c50292754b47753
+
 ### Health research and recording
 
-- [ ] ~45 minutes so far: Continue updating health notes https://github.com/vipulnaik/diet-exercise-health/commits/master/events/2024/2024-07-18-excessive-morning-activity-and-abdominal-pain-in-the-afternoon.md?since=2024-08-16&until=2024-08-16
+- [x] ~1 hour 5 minutes: Continue updating health notes https://github.com/vipulnaik/diet-exercise-health/commits/master/events/2024/2024-07-18-excessive-morning-activity-and-abdominal-pain-in-the-afternoon.md?since=2024-08-16&until=2024-08-16
 
+## House chores
+
+- [x] ~10 minutes: Deal with and document a house matter
 ## Other activities
 
 ### Medical education
 
-- [ ] ~45 minutes so far: Continue watching / listening to videos
-
-
+- [x] ~1 hour 45 minutes: Continue watching / listening to videos (with adjustments for time multiplexed with other things)
+- [x] ~20 minutes: Continue watching Ninja Nerd videos (new content, starting the renal physiology playlist)
