Add summaries for period of 2024-08-19 to 2024-08-22; fetch latest personal issues

--- a/personal-issues/1671.md
+++ b/personal-issues/1671.md
@@ -16,6 +16,8 @@ number:	1671
 
 ## Personal finances, income and taxes
 
+### Financial planning
+
 - [x] ~1 hour 10 minutes: Continue filling in data for virtual fund setup https://github.com/vipulnaik/personal-finances/commits/master/sql/expense_category_virtual_fund_influxes.sql?since=2024-08-18&until=2024-08-18
 
 ## Other activities
