--- a/personal-issues/1673.md
+++ b/personal-issues/1673.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2024-08-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,46 @@ projects:
 milestone:	
 number:	1673
 --
+## Personal projects
+
+### AI Watch / Org Watch
+
+- [x] ~30 minutes: Take the next steps on some stuff
+
+### Donations list website (DLW)
+
+- [x] ~2 minutes: Push back expected completion date https://github.com/vipulnaik/donations/commit/598a099612d0bd57da6297321c4a6de2467d3d40
+
 ## Personal finances, income and taxes
 
+### Financial planning
+
+- [x] ~2 hours 30 minutes: Put together some views using the virtual fund setup I did over the weekend https://github.com/vipulnaik/personal-finances/commits?since=2024-08-20&until=2024-08-20
 ### Indian taxes
 
 - [x] ~3 minutes: Wrap up some items from yesterday
+
+## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~15 minutes: Potatoes prep excluding time multiplexed with watching videos https://github.com/vipulnaik/diet-exercise-health/commit/c8444796e6e4188c6e4cfb5af07375f1194f5d81
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for remainder of last week + week summary https://github.com/vipulnaik/daily-updates/commit/b490a03ca10fda664dd19e7b2b37005c97d0b491
+
+### Health research and recording
+
+- [x] ~3 minutes: Improve best practices around sleep https://github.com/vipulnaik/diet-exercise-health/commit/0282f67f40fc4a07a3714697d59b5247142666ad
+
+### Periodic reviews
+
+- [x] ~7 minutes: Do a periodic review of Berkeley street names
+
+## Other activities
+
+### Medical education
+
+- [x] ~20 minutes: Continue watching Ninja Nerd videos (new content, continuing the renal physiology playlist)
+- [x] ~30 minutes: Watch a few videos on miscellaneous medical topics (methylation, phosphatidylcholine)
