Tweak time estimate for potatoes prep; fetch latest personal issues

--- a/personal-issues/1676.md
+++ b/personal-issues/1676.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-08-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -9,6 +9,10 @@ milestone:
 number:	1676
 --
 ## Personal projects
+
+### Devops stuff
+
+- [x] ~25 minutes: Continue with MediaWiki upgrades
 
 ### AI Watch / Org Watch
 
@@ -21,6 +25,10 @@ number:	1676
 - [x] ~1 hour 20 minutes: Continue work on 2023 US federal tax return
 
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/a2f2de060778f08bc73ea9016815e6df7d779f2e
 
 ### Cooking and food purchases
 
