--- a/personal-issues/1673.md
+++ b/personal-issues/1673.md
@@ -31,7 +31,7 @@ number:	1673
 
 ### Cooking and food purchases
 
-- [x] ~15 minutes: Potatoes prep excluding time multiplexed with watching videos https://github.com/vipulnaik/diet-exercise-health/commit/c8444796e6e4188c6e4cfb5af07375f1194f5d81
+- [x] ~25 minutes: Potatoes prep excluding 45 minutes multiplexed with watching videos https://github.com/vipulnaik/diet-exercise-health/commit/c8444796e6e4188c6e4cfb5af07375f1194f5d81
 
 ### Updates tracking and planning
 
