Add summaries for period of 2024-09-02 to 2024-09-06; fix diet-exercise-health links; fetch latest personal issues

--- a/personal-issues/1686.md
+++ b/personal-issues/1686.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-09-02
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,12 +10,52 @@ number:	1686
 --
 ## Personal projects
 
+### AI Watch / Org Watch
+
+- [x] ~2 minutes: Send a reply
+
 ### Contract work for Vipul Naik
 
 - [x] ~8 minutes: Add July 2024 and August 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/4509ef7b9bd7aac1e1fa6b6b889d3da8e2a8c9b9
 
+### Timelines wiki
+
+- [x] ~30 minutes: Start [review](https://timelines.issarice.com/wiki/Talk:Timeline_of_biorisk#Review_by_Vipul_starting_2024-09-02) of timeline of biorisk
+
 ## Personal finances, income and taxes
+
+### US taxes
+
+- [x] ~35 minutes: Check in on some tax-related processing and record various updates
 
 ### Financial recording
 
 - [x] ~2 minutes: Update July 2024 contractwork balance to reflect payments due to @riceissa https://github.com/vipulnaik/personal-finances/commit/6c50f922ddf29bbd2de5182609cc8d4df976597e
+
+##  Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour: Potatoes prep (excluding 15 minutes multiplexed with watching Ninja Nerd videos) https://github.com/vipulnaik/diet-exercise-health/commit/e3bf7a47aaadfc5d8db6655e8aca7846311a7d7f
+
+### Laundry
+
+- [x] ~15 minutes: Heavy laundry
+
+### Stocking up
+
+- [x] ~4 minutes: Make a couple of online purchases (most of the items in question were already in my cart)
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add weekend summaries, week summary, and month summary https://github.com/vipulnaik/daily-updates/commit/c5b7d3d5e8010de340b19802678b28b3159c216e
+
+### Health research and recording
+
+- [x] ~3 minutes: Add a pulse oximeter reading https://github.com/vipulnaik/diet-exercise-health/commit/7fc00afcdf3d3af3cefe9679e4fd3d9944b089a0
+
+## Other activities
+
+### Medical education
+
+- [x] ~25 minutes: Continue watching Ninja Nerd videos (new content, continuing the pharmacology playlist; includes 15 minutes multiplexed with potatoes prep)
