Add summaries for period of 2024-09-07 to 2024-09-08; add week summary; fetch latest personal issues

--- a/personal-issues/1691.md
+++ b/personal-issues/1691.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-09-07
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,11 +10,20 @@ number:	1691
 --
 ## Personal projects
 
+### Devops stuff
+
+- [x] ~2 **hours**: Continue with migration of MediaWiki sites
+- [x] ~10 minutes: Take care of a cleanup item associated with recently completed MediaWiki upgrades 
+
 ### AI Watch / Org Watch
 
-- [x] ~6 minutes: Reply in an email thread
+- [x] ~11 minutes: Reply in an email thread and sort out some related stuff
 
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~13 minutes: Add weekday summaries + fix links https://github.com/vipulnaik/daily-updates/commit/63b7f64ba8e125e90c0a57e3ac443ac49bd680e9
 
 ### Cooking and food purchases
 
@@ -22,11 +31,15 @@ number:	1691
 
 ### Health research and recording
 
-- [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/45ccb9147d043ace2ccb0f3d0fc43497960ef257
+- [x] ~9 minutes: Take three breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/45ccb9147d043ace2ccb0f3d0fc43497960ef257 https://github.com/vipulnaik/diet-exercise-health/commit/99b4adb7164b0ac0b5377f7d7faae5578e913941 https://github.com/vipulnaik/diet-exercise-health/commit/3f14841d34081c591cd3c12990b2ada59f27fb59
+
+### Laundry
+
+- [x] ~22 minutes: Regular laundry (large load needing two pickup trips)
 
 ## Other activities
 
 ### Medical education
 
 - [x] ~7 minutes: Have a brief conversation related to recent Ninja Nerd video consumption and some related research and learning
-- [ ] ~20 minutes so far: Continue watching Ninja Nerd videos (new content, continuing the pharmacology playlist) (including 15 minutes multiplexed with potatoes prep)
+- [x] ~25 minutes: Continue watching Ninja Nerd videos (new content, continuing the pharmacology playlist) (including 15 minutes multiplexed with potatoes prep)
