--- a/personal-issues/1698.md
+++ b/personal-issues/1698.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-09-14
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,17 @@ projects:
 milestone:	
 number:	1698
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~1 hour: Continue migration of MediaWiki sites
+
+### Contract work for Vipul Naik
+
+- [x] ~12 minutes: Add contract work data for Hith; make related updates https://github.com/vipulnaik/contractwork/commit/f287a1a6ab615f48cee7f4619595a0d501bf6f15 https://github.com/vipulnaik/contractwork/commit/4889754391545393b01597170fbfd40ed2cc19dc
+- [x] ~5 minutes: Look into some stuff related to payments
+
 ## Personal finances, income and taxes
 
 ### Financial tracking and recording
@@ -16,9 +27,14 @@ number:	1698
 
 ## Personal chores
 
+### Updates tracking
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/f40e989c59edd739f46bc736e330c32248d57ef2
+
 ### Cooking and food purchases
 
 - [x] ~7 minutes: Lentils prep https://github.com/vipulnaik/diet-exercise-health/commit/923ef9bc987b20c5a518d91f4e32ad56fcfb6786
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/30d345c3f6898975b5f4658a9bf1b47187c0cf6a
 
 ### Health research and recording
 
@@ -28,4 +44,8 @@ number:	1698
 
 ### Medical education
 
-- [ ] ~25 minutes so far: Continue listening to educational videos (excluding multiplexed time counted elsewhere)
+- [x] ~55 minutes: Continue listening to educational videos (excluding multiplexed time counted elsewhere)
+
+### Periodic conversations
+
+- [x] ~1 hour 40 minutes: Catch up with a friend
