Add summaries for week of 2024-09-16 to 2024-09-22; fetch latest personal issues

--- a/personal-issues/1700.md
+++ b/personal-issues/1700.md
@@ -22,6 +22,8 @@ number:	1700
 
 ## Personal chores
 
+### Cooking and food purchases
+
 - [x] ~1 hour 5 minutes: Meal prep https://github.com/vipulnaik/diet-exercise-health/commit/d0221a5dc7d7a0993172a2e2b0a67f627918e86a excluding 1 hour 5 minutes spent watching videos
 
 ## Other activities
