--- a/personal-issues/1701.md
+++ b/personal-issues/1701.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2024-09-17
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,8 +14,31 @@ number:	1701
 
 - [x] ~5 minutes: Continue with some followup verification work
 
+### Financial recording
+
+- [x] ~2 minutes: Update contractwork balance for August 2024 to reflect payments to some contract workers https://github.com/vipulnaik/personal-finances/commit/02c5558e6257c0e28c5e38bc58ffcd0f1160da6e
+
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/c5ea60ecbc938883c20b2d705105fa9d46affe05
 
 ### Cooking and food purchases
 
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/5325438ada4ff3edf6f2e7b2121cc9fa3b79a40c
+
+### Cleaning
+
+- [x] ~25 minutes: Monthly cleaning tasks
+
+## Other activities
+
+### Periodic conversations
+
+- [x] ~5 minutes: Briefly chat over text
+
+### Medical education
+
+- [x] ~10 minutes: Continue reviewing Ninja Nerd antibiotics video content
+- [x] ~50 minutes: Continue watching patient story videos (excluding portion multiplexed with cleaning, which I counted toward cleaning)
