Add summaries for period of 2024-09-28 to 2024-09-29; add week summary; fetch latest personal issues

--- a/personal-issues/1712.md
+++ b/personal-issues/1712.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-09-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -21,6 +21,10 @@ number:	1712
 
 ## Personal finances, income and taxes
 
+### Financial recording and tracking
+
+- [x] ~5 minutes: Save recent credit scores and reports https://github.com/vipulnaik/personal-finances/commit/29b878abc0fd198a2c557aced1a55a98b126db0b
+
 ### US taxes
 
 - [x] ~8 minutes: Take care of some tax recording work
@@ -30,6 +34,10 @@ number:	1712
 ### Cooking and food purchases
 
 - [x] ~5 minutes: Lentils prep https://github.com/vipulnaik/diet-exercise-health/commit/4a993ce711f19296fa36cea07fdc69f05b1cf086
+
+### Updates tracking and planning
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/334a9499e4181f8e4f5edfa9a1ae74017f1e0847
 
 ### Health research and recording
 
@@ -54,9 +62,19 @@ number:	1712
 
 - [x] ~7 minutes: Make Walgreens shopping list
 
+### Contingency planning
+
+- [x] ~10 minutes: Execute on blindness fire drill
+
 ## House chores
 
 - [x] ~2 minutes: Do monthly smoke detector and CO alarm checks
+
+## Family and career planning
+
+### Career planning stuff
+
+- [x] ~5 minutes: Review [JavaScript/Scala/Python comparison cheatsheets](https://github.com/vipulnaik/working-drafts/blob/master/programming-notes/scala-javascript-python-comparison-cheatsheets.md) (while potentially marginally helpful for day job, personal projects, etc. this is mainly for readiness in case of future need for a job search)
 
 ## Other activities
 
