Adjust minutes spent for 2024-09-29; fetch latest personal issues

--- a/personal-issues/1714.md
+++ b/personal-issues/1714.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-09-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,7 +14,14 @@ number:	1714
 
 - [x] ~30 minutes: Review a couple of timelines and share feedback on them; immerse myself a bit more in the space
 
+### AI Watch / Org Watch
+
+- [x] ~15 minutes: Send a followup email
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries + week summary https://github.com/vipulnaik/daily-updates/commit/eda16929866f8cf164a1297d77e5267898405e0e
 
 ### Cooking and food purchases
 
