--- a/personal-issues/1713.md
+++ b/personal-issues/1713.md
@@ -20,6 +20,7 @@ number:	1713
 
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/9e64767eedddddf2ad4b2a42fbc06f22d3fdc264
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/334e657930f2f2925bedc07c8a7fad8c9c1a2b01
+- [x] ~4 minutes: Finish lentils prep from yesterday 
 
 ### Health research and recording
 
