Add summaries for period of 2024-10-07 to 2024-10-11; fetch latest personal issues

--- a/personal-issues/1721.md
+++ b/personal-issues/1721.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-10-07
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -19,10 +19,26 @@ number:	1721
 
 - [x] ~8 minutes: Make payment to clear September 2024 payments due to Olivia Mora; add payments due and payment made https://github.com/vipulnaik/contractwork/commit/d3180bef591ec40821bff98ba1a5b6253763ce09
 
+## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries + week summary https://github.com/vipulnaik/daily-updates/commit/d351fd985a77fd644667a56b94838e925e70c3ac
+
+### Health research and recording
+
+- [x] ~6 minutes: Take a pulse oximeter reading and a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/2539b9efcbb47659a9c78092883da1846bfea7c9
+- [x] ~20 minutes: Explore the use of my newly purchased intraoral camera and dental mirror; take photos with the former and do some research on issues identified; public documentation is deferred for now
+
+### Package pickup and shopping
+
+- [x] ~1 hour 25 minutes: Amazon Hub Locker + Walgreens trip https://github.com/vipulnaik/diet-exercise-health/commit/bb2e4a4ce53941a941a081e15b77ca71436da909
+
 ## Other activities
 
 ### Medical education
 
-- [ ] ~10 minutes so far: Continue watching Ninja Nerd videos (new content, continuing the pharmacology playlist)
+- [x] ~20 minutes: Continue watching Ninja Nerd videos (new content, continuing the pharmacology playlist)
 - [x] ~5 minutes: Continue listening to a video
-- [ ] ~50 minutes so far: Listen to another video
+- [x] ~1 hour 20 minutes: Listen to another video
+- [x] ~10 minutes: Start listening to another video
