Add summaries for period of 2024-10-12 to 2024-10-13; add week summary; fetch latest personal issues

--- a/personal-issues/1726.md
+++ b/personal-issues/1726.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-10-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -18,8 +18,41 @@ number:	1726
 
 - [x] ~5 minutes: Add September 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/c33c17e9fb3cea2a475c129d8578a2f1b81232d3
 
+## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~5 minutes: Lentils prep (soaking part) https://github.com/vipulnaik/diet-exercise-health/commit/a65bd409ac723a0712981b2beb614727bcfb0a17
+### Health stuff (research, appointments, recording)
+
+- [x] ~15 minutes: Book my flu vaccine appointment and take associated preparatory steps https://github.com/vipulnaik/diet-exercise-health/commit/ddf35c7eb1c757fabb2f3000972a860df5ed5aa7; also improve best practices in the process (https://github.com/vipulnaik/diet-exercise-health/compare/fee2657f8991f01ef618ba1405c9b08310cba1a6...1003614cc68f061fb83cf0c05b0c039963b29c15)
+- [x] ~10 minutes: Record updates https://github.com/vipulnaik/diet-exercise-health/commit/c42d1cc0d437f675d21f12150579c3fc2173a548 https://github.com/vipulnaik/diet-exercise-health/commit/da9ab2656a762b3d4f20fa247769fd47a03d6675 https://github.com/vipulnaik/diet-exercise-health/commit/322c1bca7e988215d289b86dfc02c17b4e11d110
+- [x] ~1 hour: Work on best practices around sleep, light, and exertion + stimulation https://github.com/vipulnaik/diet-exercise-health/commit/826e455725419101207985ae3a4cb917a656f7c9 https://github.com/vipulnaik/diet-exercise-health/commit/0b02cbea1ddbcd5261cc689e1b7f111cfc2ccbc7
+ 
+### Updates tracking and planning
+
+- [x] ~5 minutes: Give myself more flexibility with hours https://github.com/vipulnaik/daily-updates/commit/7489c1a1d1736423ff57b17b4e8eeb33a8e10ce8 https://github.com/vipulnaik/daily-updates/commit/9f635b38814248a3fb5404fb7905f247f5a984e1
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/c45dc6846cf8c3dff41bd51aab0112cbc59cccf9
+
+### Cleaning
+
+- [x] ~15 minutes: Miscellaneous monthly house cleaning
+- [x] ~2 minutes: Wash the keyboard cover
+
+## House chores
+
+### Rent payment
+
+- [x] ~10 minutes: Prepare rent check for mailing
+
 ## Other activities
 
 ### General
 
 - [x] ~10 minutes: Reply to an email
+
+### Medical education
+
+- [x] ~8 minutes: Start listening to a video
+- [x] ~1 hour 30 minutes: Listen to another video (excluding part of its sponsored segment and excluding time multiplexed with house cleaning)
+- [x] ~1 hour 10 minutes: Listen to another video series
