--- a/personal-issues/1723.md
+++ b/personal-issues/1723.md
@@ -21,7 +21,7 @@ number:	1723
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/f7805f3c01d42dce655e032bb12ab757e35a14b8
 - [x] ~15 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/f7b021eaa94428a385bbec157869ea94a646fdfb excluding 1 hour 10 minutes multiplexed with watching or listening to videos
 
-### Health research and recording
+### Health stuff (research, appointments, recording)
 
 - [x] ~1 hour 50 minutes: Dental cleaning trip + recording and setting up reminders for the next dental cleaning https://github.com/vipulnaik/diet-exercise-health/commit/42c3f2da123acec0361a1d684ab14191edc1a365 and various followup commits; later, do an exam with dental mirror and intraoral camera https://github.com/vipulnaik/diet-exercise-health/commit/daadcc026718e02b7d95d330f1fa2ebcb90ccffa
 - [x] ~25 minutes: Make a bunch of updates to various docs and kick off a new abdominal discomfort doc
