Add summaries for week of 2024-10-14 to 2024-10-20; fetch latest personal issues; remove trailing spaces in day_summaries.sql

--- a/personal-issues/1728.md
+++ b/personal-issues/1728.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-10-14
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -16,9 +16,14 @@ number:	1728
 
 ## Personal chores
 
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries + week summary https://github.com/vipulnaik/daily-updates/commit/7522a69c5866a743729863f93f38fd4ef75f8090
+
 ### Cooking and food purchases
 
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/1cf43302c682c08cbbce758963a4a3bf1358c588
+- [x] ~1 hour: Potatoes prep, excluding time multiplexed with medical education videos https://github.com/vipulnaik/diet-exercise-health/commit/084211e26d3f6d79ac692f09253c1133782cd9de
 
 ### Health research and recording
 
@@ -26,3 +31,14 @@ number:	1728
 - [x] ~10 minutes: Include blood test cost estimates from more ordering sites https://github.com/vipulnaik/diet-exercise-health/commit/3394cab98d29fe5c0147d69fdc3995c80a56f910
 - [x] ~10 minutes: Add a doc with the list of things to investigate https://github.com/vipulnaik/diet-exercise-health/commit/9fa1e9fe6066634f1d52e7f697b926d4bb6ff099
 - [x] ~2 minutes: Increase threshold for standing-on-toes-with-eyes-closed exercise https://github.com/vipulnaik/diet-exercise-health/commit/6b2fc4fcdfe299f33d8d71489a08ac88b5044d53
+- [x] ~5 minutes: Make miscellaneous fixes https://github.com/vipulnaik/diet-exercise-health/commit/46312ea03ac02e0c2117c8cb5a63e0ce37ca393d https://github.com/vipulnaik/diet-exercise-health/commit/751e645340707f5136bff83611ebadddc3f71afa https://github.com/vipulnaik/diet-exercise-health/commit/475d516ca334586516d65ead7942351a0021dd9a
+
+## Other activities
+
+### Periodic conversations
+
+- [x] ~1 hour 15 minutes: Chat with a friend
+
+### Medical education
+
+- [x] ~45 minutes: Watch videos to learn more about dexa scans (25 minutes of this watch time was multiplexed with potatoes prep)
